--- a/client/src/components/Slider/Slider.module.css
+++ b/client/src/components/Slider/Slider.module.css
@@ -2,25 +2,42 @@
   width: 100%;
   height: 400px;
   position: relative;
-  /* overflow: hidden; */
+  margin: auto;
+  overflow: hidden;
 }
 
-.slide {
-  position: absolute;
-  top: 0;
-  left: 0;
+.carousel {
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.carousel-inner {
+  white-space: nowrap;
+  transform: translateX(0);
+}
+
+.carousel-item {
+  display: inline-block;
   width: 100%;
-  height: 100%;
-  opacity: 1;
+  transition: ease 1s;
+}
+
+.carousel-indicators {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
   transform: translateX(-50%);
 }
-
-.slide img {
-  width: 100%;
-  height: 100%;
+.carousel-indicator-item {
+  width: 15px;
+  height: 15px;
+  border: none;
+  background: #867979;
+  opacity: 0.5;
+  margin: 0.2em;
+  border-radius: 50%;
+  cursor: pointer;
 }
-
 .active {
   opacity: 1;
-  transform: translateX(0);
 }
