--- a/client/src/pages/Register/Register.module.css
+++ b/client/src/pages/Register/Register.module.css
@@ -2,7 +2,6 @@
   width: 406px;
   max-width: 406px;
   margin: 70px auto;
-
 }
 
 #signup {
@@ -17,7 +16,7 @@
 }
 
 #signup .header {
-  margin: 20px 0 ;
+  margin: 20px 0;
   display: flex;
   justify-content: center;
 }
@@ -57,7 +56,12 @@ input:-moz-placeholder {
 }
 
 #signup .inputs input[type="email"],
-input[type="password"],input[type="fullname"],input[type="address"],input[type="username"],input[type="phone"] {
+input[type="password"],
+input[type="firstName"],
+input[type="lastName"],
+input[type="address"],
+input[type="username"],
+input[type="phone"] {
   background: #f5f5f5;
   font-size: 0.8rem;
   -moz-border-radius: 3px;
@@ -73,10 +77,11 @@ input[type="password"],input[type="fullname"],input[type="address"],input[type="
 
 #signup .inputs input[type="email"]:focus,
 input[type="password"]:focus,
-input[type="fullname"]:focus,
+input[type="firstName"]:focus,
+input[type="lastName"]:focus,
 input[type="address"]:focus,
 input[type="username"]:focus,
-input[type="phone"]:focus{
+input[type="phone"]:focus {
   background: #fff;
   box-shadow: 0px 0px 0px 3px #4d698d, inset 0px 2px 3px rgba(0, 0, 0, 0.2),
     0px 5px 5px rgba(0, 0, 0, 0.15);
