--- a/client/src/pages/Profile/Profile.module.css
+++ b/client/src/pages/Profile/Profile.module.css
@@ -30,8 +30,10 @@
 }
 .profile-left-avatar img {
   width: 100%;
+  height: 100%;
   background-color: #f5f5f5;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .profile-left-username {
@@ -52,7 +54,7 @@
 }
 
 .profile-left-body-info i {
-  font-size: 14px;
+  font-size: 16px;
   padding-right: 10px;
 }
 
@@ -84,8 +86,10 @@
 }
 
 .profile-right-header > span {
-  font-size: 14px;
+  font-size: 16px;
   color: rgba(85, 85, 85, 0.8);
+  display: block;
+  margin: 10px 0;
 }
 
 .profile-right-body {
@@ -102,6 +106,7 @@
   align-items: center;
   display: flex;
   justify-content: flex-end;
+  margin: 20px;
 }
 
 .profile-right-body-name {
@@ -113,11 +118,14 @@
 
 .profile-right-body-info {
   width: 80%;
+  font-size: 20px;
 }
 
 .profile-right-body-info input {
-  font-size: 24px;
+  font-size: 20px;
   outline: none;
+  padding: 8px 8px;
+  width: 80%;
 }
 
 .btn-save {
@@ -129,7 +137,6 @@
   cursor: pointer;
   border-radius: 5px;
   display: block;
-  margin-top: 15px;
 }
 
 .profile-right-body-right {
@@ -148,6 +155,7 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .profile-right-body-file input {
