--- a/client/src/pages/Register/Register.module.css
+++ b/client/src/pages/Register/Register.module.css
@@ -27,24 +27,13 @@
   font-weight: bold;
 }
 
-#signup .sep {
-  height: 1px;
-  background: #e8e8e8;
-  width: 406px;
-  margin: 0px -25px;
-}
-
 #signup .inputs {
   margin-top: 25px;
 }
 
-#signup .inputs label {
-  color: #8f8f8f;
-  font-size: 12px;
-  font-weight: 300;
-  letter-spacing: 1px;
-  margin-bottom: 7px;
-  display: block;
+.input-item {
+  margin-bottom: 20px;
+
 }
 
 input::-webkit-input-placeholder {
@@ -55,33 +44,24 @@ input:-moz-placeholder {
   color: #b5b5b5;
 }
 
-#signup .inputs input[type="email"],
-input[type="password"],
-input[type="firstName"],
-input[type="lastName"],
-input[type="address"],
-input[type="username"],
-input[type="phone"] {
+
+
+#signup .inputs input[type="text"],
+input[type="password"] {
   background: #f5f5f5;
-  font-size: 0.8rem;
+  font-size: 16px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
   border: none;
-  padding: 13px 10px;
-  width: 330px;
-  margin-bottom: 20px;
+  padding: 12px 10px;
+  width: 350px;
   box-shadow: inset 0px 2px 3px rgba(0, 0, 0, 0.1);
   clear: both;
 }
 
-#signup .inputs input[type="email"]:focus,
-input[type="password"]:focus,
-input[type="firstName"]:focus,
-input[type="lastName"]:focus,
-input[type="address"]:focus,
-input[type="username"]:focus,
-input[type="phone"]:focus {
+#signup .inputs input[type="text"]:focus,
+input[type="password"]:focus {
   background: #fff;
   box-shadow: 0px 0px 0px 3px #4d698d, inset 0px 2px 3px rgba(0, 0, 0, 0.2),
     0px 5px 5px rgba(0, 0, 0, 0.15);
@@ -151,4 +131,10 @@ input[type="phone"]:focus {
     from(#a4b0cb),
     to(#b9c5dd)
   );
+}
+.error {
+  font-size: 14px;
+    color: #e64646;
+    display: block;
+    margin-top: 10px;
 }
