--- a/client/src/pages/Register/Register.module.css
+++ b/client/src/pages/Register/Register.module.css
@@ -47,7 +47,7 @@ input:-moz-placeholder {
 
 
 #signup .inputs input[type="text"],
-input[type="password"] {
+#signup .inputs input[type="password"] {
   background: #f5f5f5;
   font-size: 16px;
   -moz-border-radius: 3px;
@@ -61,7 +61,7 @@ input[type="password"] {
 }
 
 #signup .inputs input[type="text"]:focus,
-input[type="password"]:focus {
+#signup .inputs input[type="password"]:focus {
   background: #fff;
   box-shadow: 0px 0px 0px 3px #4d698d, inset 0px 2px 3px rgba(0, 0, 0, 0.2),
     0px 5px 5px rgba(0, 0, 0, 0.15);
