--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary : #1b75bc;
+  --white : #fff;
+}
+
 .slick-slide > div {
   margin: 0 10px ;
 }
@@ -41,3 +46,6 @@
   color: #e8e8e8;
 }
 
+.css-r11z79-MuiDataGrid-root .MuiDataGrid-menuIcon {
+  margin: 0;
+}
