--- a/client/src/pages/Register/Register.module.css
+++ b/client/src/pages/Register/Register.module.css
@@ -97,14 +97,8 @@ input:-moz-placeholder {
   font-weight: 500;
   letter-spacing: 1px;
   text-align: center;
-  background: -moz-linear-gradient(top, #b9c5dd 0%, #a4b0cb);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#b9c5dd),
-    to(#a4b0cb)
-  );
+  background-color: #98a5c2;
+  opacity: 0.7;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
@@ -124,13 +118,8 @@ input:-moz-placeholder {
 
 #signup .inputs #submit:hover {
   background: -moz-linear-gradient(top, #a4b0cb 0%, #b9c5dd);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#a4b0cb),
-    to(#b9c5dd)
-  );
+  background-color: #98a5c2;
+  opacity: 1;
 }
 .error {
   font-size: 14px;
