--- a/client/src/pages/DetailProduct/DetailProduct.module.css
+++ b/client/src/pages/DetailProduct/DetailProduct.module.css
@@ -10,8 +10,10 @@
   max-width: 83.33333%;
   margin: auto;
 }
+.detail .content {
+  padding: 20px;
+}
 .container-left {
-  flex: 1;
   text-align: center;
 }
 .container-left img {
@@ -20,7 +22,6 @@
   height: 300px;
 }
 .container-right {
-  flex: 1;
   padding-right: 30px;
 }
 .container-right-title {
