--- a/client/src/pages/Search/Search.module.css
+++ b/client/src/pages/Search/Search.module.css
@@ -1,17 +1,16 @@
 .search {
-    max-width: 83.33333%;
-  margin: auto;
+  background-color: #f0f0f0;
 }
 
 .search .container {
-    margin-right: auto;
-  margin-left: auto;
+  max-width: 83.33333%;
+  margin: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 
 .search .content {
-    padding: 20px;
+  padding: 20px;
 }
 
 .search .cover {
