--- a/client/src/Layout/DefaultLayout/Header/Header.module.css
+++ b/client/src/Layout/DefaultLayout/Header/Header.module.css
@@ -170,6 +170,9 @@
 }
 
 @media (max-width: 720px) {
+  .header-right > li {
+    padding: 0;
+  }
   .header .header-container {
     flex-wrap: wrap;
     justify-content: space-between;
