--- a/client/src/pages/ChangePassword/ChangePassword.module.css
+++ b/client/src/pages/ChangePassword/ChangePassword.module.css
@@ -151,3 +151,110 @@
   cursor: pointer;
   border-radius: 5px;
 }
+
+@media (max-width: 900px) {
+  .changepass-right-body-name {
+    text-align: right;
+    color: rgba(85, 85, 85, 0.8);
+    margin: 10px;
+    width: 30%;
+  }
+  .changepass-right-body-input input {
+    font-size: 20px;
+    outline: none;
+    padding: 8px 8px;
+    width: 100%;
+    border: none;
+  }
+}
+
+@media (max-width: 740px) {
+  .changepass-right-body-name {
+    font-size: 10px;
+  }
+  .changepass-right-body-input input {
+    font-size: 15px;
+    outline: none;
+    padding: 8px 8px;
+    width: 100%;
+    border: none;
+  }
+  .btn-save {
+    font-size: 16px;
+    padding: 8px 16px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  .changepass-right {
+    flex: 1 1;
+    margin-left: 12px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .changepass-left-body-changePass a {
+    font-size: 12px;
+    text-decoration: none;
+    color: #333;
+  }
+  .changepass-left {
+    display: block;
+    width: 120px;
+    flex-shrink: 0;
+    padding: 10px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .changepass-left-username {
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 15px;
+    overflow: hidden;
+    font-size: 14px;
+  }
+  .changepass-right-header > span {
+    font-size: 14px;
+    color: rgba(85, 85, 85, 0.8);
+    display: block;
+    margin: 10px 0;
+  }
+}
+
+@media (max-width: 640px) {
+  .changepass-left-body-changePass a {
+    font-size: 10px;
+    text-decoration: none;
+    color: #333;
+  }
+  .changepass-right-header > span {
+    font-size: 12px;
+    color: rgba(85, 85, 85, 0.8);
+    display: block;
+    margin: 10px 0;
+  }
+  .changepass-right-header h3 {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .changepass-right-body {
+    display: flex;
+    padding: 10px 10px 0;
+}
+}
+
+@media (max-width: 570px) {
+}
+@media (max-width: 480px) {
+}
+
+@media (max-width: 400px) {
+}
+
+@media (max-width: 350px) {
+}
