--- a/client/src/pages/Profile/Profile.module.css
+++ b/client/src/pages/Profile/Profile.module.css
@@ -115,6 +115,7 @@
 }
 
 .profile-right-body-name {
+  font-size: 20px;
   width: 20%;
   text-align: right;
   color: #333;
@@ -154,9 +155,9 @@
 }
 
 .profile-right-body-file {
-  height: 100px;
-  width: 100px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .profile-right-body-file img {
   width: 100px;
@@ -182,4 +183,703 @@
 .btn {
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 1113px) {
+  .profile-right-body-infomation {
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    margin: 18px;
+  }
+  .profile-right-body-info {
+    width: 80%;
+    font-size: 16px;
+  }
+
+  .profile-right-body-name {
+    font-size: 16px;
+    width: 20%;
+    text-align: right;
+    color: #333;
+    margin: 10px;
+  }
+
+  .profile-right-body-info input {
+    font-size: 16px;
+    outline: none;
+    padding: 6px 6px;
+    width: 80%;
+    border: none;
+    color: rgba(85, 85, 85);
+  }
+
+  .profile-right-body-file img {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 90px;
+    height: 45px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .profile-left-body-info i {
+    font-size: 14px;
+    padding-right: 10px;
+  }
+  .profile-left-body-info > span {
+    font-size: 14px;
+  }
+  .profile-right-body-infomation {
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    margin: 14px;
+  }
+  .profile-left {
+    display: block;
+    width: 160px;
+    flex-shrink: 0;
+    padding: 18px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+
+  .profile-left-header {
+    display: flex;
+    padding: 12px 0;
+    border-bottom: 1px solid #e8e8e8;
+  }
+
+  .profile-left-avatar {
+    width: 45px;
+    height: 45px;
+  }
+  .profile-right-body-name {
+    font-size: 14px;
+    width: 20%;
+    text-align: right;
+    color: #333;
+    margin: 10px;
+  }
+  .profile-right-body-info {
+    width: 80%;
+    font-size: 14px;
+  }
+  .profile-right-body-info input {
+    font-size: 14px;
+    outline: none;
+    padding: 4px 4px;
+    width: 80%;
+    border: none;
+    color: rgba(85, 85, 85);
+  }
+  .profile-right-body-right {
+    width: 30%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  .profile-right-body-file img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 80px;
+    height: 40px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .profile-left-body-changePass a {
+    font-size: 14px;
+    text-decoration: none;
+    color: #333;
+  }
+  .btn-save {
+    font-size: 18px;
+    padding: 8px 16px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+}
+
+@media (max-width: 860px) {
+  .profile-left-username {
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 5px;
+    overflow: hidden;
+    font-size: 12px;
+  }
+  .profile-left {
+    display: block;
+    width: 140px;
+    flex-shrink: 0;
+    padding: 18px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .profile-right-header {
+    padding: 15px;
+  }
+  .profile-right-body {
+    padding: 15px;
+  }
+  .profile-right-body-infomation {
+    margin: 10px;
+  }
+  .profile-right-body-name {
+    font-size: 12px;
+  }
+  .profile-right-body-info {
+    font-size: 12px;
+  }
+  .profile-right-body-info input {
+    font-size: 12px;
+  }
+  .profile-right-header > span {
+    font-size: 14px;
+  }
+  .profile-right-header h3{
+    font-size: 18px;
+  }
+  .profile-right-body-file img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 70px;
+    height: 30px;
+    font-size: 10px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .btn-save {
+    font-size: 16px;
+    padding: 7px 14px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+  .profile-left-body-changePass a {
+    font-size: 11px;
+    text-decoration: none;
+    color: #333;
+  }
+}
+
+@media (max-width: 740px) {
+  .profile-left-body-changePass a {
+    font-size: 10px;
+    text-decoration: none;
+    color: #333;
+  }
+
+  .profile-left-body-info i {
+    font-size: 12px;
+    padding-right: 10px;
+  }
+  .profile-left {
+    display: block;
+    width: 120px;
+    flex-shrink: 0;
+    padding: 10px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .profile-right-header {
+    padding: 12px;
+  }
+  .profile-right-body {
+    padding: 12px;
+  }
+  .profile-right-body-infomation {
+    margin: 8px;
+  }
+  .profile-right-body-name {
+    font-size: 10px;
+  }
+  .profile-right-body-info {
+    font-size: 10px;
+  }
+  .profile-right-body-info input {
+    font-size: 10px;
+  }
+  .profile-right-header > span {
+    font-size: 12px;
+  }
+  .profile-right-header h3{
+    font-size: 16px;
+  }
+  .profile-right-body-file img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 65px;
+    height: 26px;
+    font-size: 8px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .btn-save {
+    font-size: 14px;
+    padding: 6px 12px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+  .profile-right {
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 640px) {
+  .profile-left-body-info > span {
+    font-size: 12px;
+  }
+  .profile-left-body-changePass {
+    padding-left: 20px;
+  }
+  .profile-left-body-changePass a {
+    font-size: 8px;
+    text-decoration: none;
+    color: #333;
+  }
+  .profile-left {
+    display: block;
+    width: 100px;
+    flex-shrink: 0;
+    padding: 4px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .profile-right-header {
+    padding: 5px;
+  }
+  .profile-right-body {
+    padding: 5px;
+  }
+  .profile-right-body-infomation {
+    margin: 2px;
+  }
+  .profile-right-body-name {
+    font-size: 10px;
+  }
+  .profile-right-body-info {
+    font-size: 10px;
+  }
+  .profile-right-body-info input {
+    font-size: 10px;
+  }
+  .profile-right-header > span {
+    font-size: 10px;
+  }
+  .profile-right-header h3{
+    font-size: 14px;
+  }
+  .profile-right-body-file img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 65px;
+    height: 26px;
+    font-size: 8px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .btn-save {
+    font-size: 12px;
+    padding: 5px 10px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+  .profile-right {
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 570px) {
+  .profile-left-body-info > span {
+    font-size: 10px;
+  }
+  .profile-left-body-changePass {
+    padding-left: 15px;
+  }
+  .profile-left-body-changePass a {
+    font-size: 6px;
+    text-decoration: none;
+    color: #333;
+  }
+  .profile-left {
+    display: block;
+    width: 90px;
+    flex-shrink: 0;
+    padding: 2px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .profile-right-header {
+    padding: 2px;
+  }
+  .profile-right-body {
+    padding: 2px;
+  }
+  .profile-right-body-infomation {
+    margin: 2px;
+  }
+  .profile-right-body-name {
+    font-size: 8px;
+  }
+  .profile-right-body-info {
+    font-size: 8px;
+  }
+  .profile-right-body-info input {
+    font-size: 8px;
+  }
+  .profile-right-header > span {
+    font-size: 8px;
+  }
+  .profile-right-header h3{
+    font-size: 12px;
+  }
+  .profile-right-body-file img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 65px;
+    height: 26px;
+    font-size: 8px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .btn-save {
+    font-size: 10px;
+    padding: 4px 8px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+  .profile-right {
+    margin-left: 10px;
+  }
+}
+@media (max-width: 480px) {
+  .profile-right-body-name {
+    font-size: 8px;
+    width: 15%;
+    text-align: right;
+    color: #333;
+    margin: 0;
+  }
+  .profile-left-body-info > span {
+    font-size: 6px;
+  }
+  .profile-left-body-changePass {
+    padding-left: 8px;
+  }
+  .profile-left-body-changePass a {
+    font-size: 6px;
+    text-decoration: none;
+    color: #333;
+  }
+  .profile-left {
+    display: block;
+    width: 90px;
+    flex-shrink: 0;
+    padding: 2px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .profile-right-header {
+    padding: 2px;
+  }
+  .profile-right-body {
+    padding: 2px;
+  }
+  .profile-right-body-infomation {
+    margin: 2px;
+  }
+  .profile-right-body-name {
+    font-size: 6px;
+  }
+  .profile-right-body-info {
+    font-size: 6px;
+  }
+  .profile-right-body-info input {
+    font-size: 6px;
+  }
+  .profile-right-header > span {
+    font-size: 6px;
+  }
+  .profile-right-header h3{
+    font-size: 10px;
+  }
+  .profile-right-body-file img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 65px;
+    height: 26px;
+    font-size: 8px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .btn-save {
+    font-size: 10px;
+    padding: 3px 6px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+}
+
+@media (max-width: 400px) {
+  .profile-right-body-name {
+    font-size: 8px;
+    width: 20%;
+    text-align: right;
+    color: #333;
+    margin: 0;
+  }
+  .profile-left-body-info > span {
+    font-size: 6px;
+  }
+  .profile-left-body-changePass {
+    padding-left: 8px;
+  }
+  .profile-left-body-changePass a {
+    font-size: 6px;
+    text-decoration: none;
+    color: #333;
+  }
+  .profile-left {
+    display: block;
+    width: 90px;
+    flex-shrink: 0;
+    padding: 2px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .profile-right-header {
+    padding: 2px;
+  }
+  .profile-right-body {
+    padding: 2px;
+  }
+  .profile-right-body-infomation {
+    margin: 2px;
+  }
+  .profile-right-body-name {
+    font-size: 6px;
+  }
+  .profile-right-body-info {
+    font-size: 6px;
+  }
+  .profile-right-body-info input {
+    font-size: 6px;
+  }
+  .profile-right-header > span {
+    font-size: 6px;
+  }
+  .profile-right-header h3{
+    font-size: 10px;
+  }
+  .profile-right-body-file img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 40px;
+    height: 20px;
+    font-size: 6px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .btn-save {
+    font-size: 10px;
+    padding: 3px 6px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+}
+
+@media (max-width: 350px) {
+  .profile-right-body-name {
+    font-size: 5px;
+    width: 25%;
+    text-align: right;
+    color: #333;
+    margin: 0;
+  }
+  .profile-left-body-info > span {
+    font-size: 5px;
+  }
+  .profile-left-body-changePass {
+    padding-left: 4px;
+  }
+  .profile-left-body-changePass a {
+    font-size: 5px;
+    text-decoration: none;
+    color: #333;
+  }
+  .profile-left {
+    display: block;
+    width: 90px;
+    flex-shrink: 0;
+    padding: 2px;
+    background: #f0f0f0;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 13%);
+    border-radius: 0.125rem;
+  }
+  .profile-right-header {
+    padding: 2px;
+  }
+  .profile-right-body {
+    padding: 2px;
+  }
+  .profile-right-body-infomation {
+    margin: 2px;
+  }
+  .profile-right-body-name {
+    font-size: 5px;
+  }
+  .profile-right-body-info {
+    font-size: 5px;
+  }
+  .profile-right-body-info input {
+    font-size: 5px;
+  }
+  .profile-right-header > span {
+    font-size: 5px;
+  }
+  .profile-right-header h3{
+    font-size: 8px;
+  }
+  .profile-right-body-file img {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .select-img {
+    background: #fff;
+    color: #555;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+    width: 36px;
+    height: 18px;
+    font-size: 5px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .btn-save {
+    font-size: 8px;
+    padding: 3px 6px;
+    background-color: #1b75bc;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+  .profile-left-username {
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 5px;
+    overflow: hidden;
+    font-size: 8px;
+  }
 }
