--- a/client/src/pages/DetailProduct/DetailProduct.module.css
+++ b/client/src/pages/DetailProduct/DetailProduct.module.css
@@ -17,7 +17,8 @@
   text-align: center;
 }
 .container-left img {
-  width: auto;
+  max-width: 100%;
+  height: auto;
   vertical-align: center;
 }
 .container-right {
